Added checkboxes and add to cart button

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,6 @@
     "AllowedHosts": "*",
     "PizzaOrderPageTitle": "Pizza Order",
     "CartPageTitle": "Cart",
-    "HomePageTitle": "Madison Pizzeria"
+    "HomePageTitle": "Madison Pizzeria",
+    "FAQPageTitle":  "FAQ Page"
 }
