--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
     "PizzaOrderPageTitle": "Pizza Order",
     "CartPageTitle": "Cart",
     "HomePageTitle": "Madison Pizzeria",
-    "FAQPageTitle":  "FAQ Page"
+    "PlaceOrderPageTitle":  "Place Order",
+    "FAQPageTitle": "FAQ Page"
 }
